# sa3-inpainter-ui

./: README.md  launch.sh  pyproject.toml
backend/: kv_cache.py  pre_encode.py  server.py  tome.py  train_embedding.py  train_lora.py  train_lora_compiled.py
backend/res4lyf/: sampler.py
mlx_sa3/: lora.py  pre_encode_mlx.py  train_lora_mlx.py  weights.py
webui/: package-lock.json
webui/src/: App.svelte
webui/src/lib/: BottomBar.svelte  HelpOverlay.svelte  LatentStrip.svelte  MainCanvas.svelte  OverviewWave.svelte  RightRail.svelte  SettingsModal.svelte  TimeAxis.svelte  Toast.svelte  TopBar.svelte  session.svelte.js  toast.svelte.js
